--- a/Grow.Server/Areas/Admin/Views/Accounts/Delete.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Accounts/Delete.cshtml
@@ -10,39 +10,49 @@
 <div>
     <h4>Account</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IsAdmin)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IsAdmin)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IsSuperAdmin)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IsSuperAdmin)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-    </dl>
-    
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.Name)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.Email)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.IsAdmin)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.IsAdmin)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.IsSuperAdmin)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.IsSuperAdmin)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.IsActive)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.IsActive)
+            </td>
+        </tr>
+    </table>
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
