--- a/Grow.Server/Areas/Admin/Views/Accounts/Details.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Accounts/Details.cshtml
@@ -9,38 +9,48 @@
 <div>
     <h4>Contest</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IsAdmin)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IsAdmin)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IsSuperAdmin)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IsSuperAdmin)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-    </dl>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.Name)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.Email)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.IsAdmin)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.IsAdmin)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.IsSuperAdmin)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.IsSuperAdmin)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.IsActive)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.IsActive)
+            </td>
+        </tr>
+    </table>
 </div>
 <div>
     <a asp-action="Index">Back to List</a>
