--- a/Grow.Server/Styles/backend.scss
+++ b/Grow.Server/Styles/backend.scss
@@ -145,7 +145,7 @@ textarea.form-control {
 }
 
 /* Row for inactive entities on /Type/Index pages */
-tr.inactive {
+tr.inactive, .card.inactive {
     background-color: rgba(0,0,0,0.05);
 }
 
