--- a/Grow.Server/Areas/Admin/Views/Files/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Files/Edit.cshtml
@@ -1,17 +1,17 @@
 ﻿@model Grow.Data.Entities.File
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 <h4>File</h4>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Url" class="control-label"></label>
-                <input asp-for="Url" disabled="disabled" class="form-control" />
+                <input asp-for="Url" readonly="readonly" class="form-control" />
                 <span asp-validation-for="Url" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Extension" class="control-label"></label>
-                <input asp-for="Extension" disabled="disabled" class="form-control" />
+                <input asp-for="Extension" readonly="readonly" class="form-control" />
                 <span asp-validation-for="Extension" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
     </div>
