--- a/Grow.Server/Areas/Admin/Views/Home/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Home/Index.cshtml
@@ -1,7 +1,91 @@
 ﻿@model Grow.Data.Entities.Contest
+
 @{
     ViewData["Title"] = "Index";
     Layout = "Layouts/_BackendLayout";
+
+    var editData = new List<int>();
+    for (int i = 30; i >= 0; i--)
+    {
+        editData.Add(new Random().Next(0, 7));
+    }
+}
+
+@section Scripts {
+<script type="text/javascript">
+    var ctx = document.getElementById('editHistory').getContext("2d");
+    var myChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+            labels: [
+                @for (var i = 30; i > 0; i--)
+                {
+                    if (i % 5 == 0)
+                    {
+                        @:"@(DateTime.Now.AddDays(-i).ToString("dd.MM."))",
+                    }
+                    else
+                    {
+                        @:"",
+                    }
+                }
+                "@DateTime.Now.ToString("dd.MM.")"
+            ],
+            datasets: [{
+                borderColor: "#6bd098",
+                backgroundColor: "#6bd098",
+                pointRadius: 0,
+                pointHoverRadius: 0,
+                borderWidth: 3,
+                data: [
+                    @string.Join(",", editData)
+                ]
+            }]
+        },
+        options: {
+            bezierCurve: false,
+            legend: {
+                display: false
+            },
+            tooltips: {
+                enabled: false
+            },
+            elements: {
+                line: {
+                    tension: 0
+                }
+            },
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        fontColor: "#9f9f9f",
+                        beginAtZero: true,
+                        maxTicksLimit: 5,
+                        //padding: 20
+                    },
+                    gridLines: {
+                        drawBorder: false,
+                        zeroLineColor: "#ccc",
+                        color: 'rgba(0,0,0,0.05)'
+                    }
+                }],
+                xAxes: [{
+                    barPercentage: 1.6,
+                    gridLines: {
+                        drawBorder: false,
+                        color: 'rgba(0,0,0,0.1)',
+                        zeroLineColor: "transparent",
+                        display: false,
+                    },
+                    ticks: {
+                        padding: 10,
+                        fontColor: "#9f9f9f"
+                    }
+                }]
+            },
+        }
+    });
+</script>
 }
 
 <div class="row">
@@ -52,7 +136,7 @@
                     <div class="col-7 col-md-8">
                         <div class="numbers">
                             <p class="card-category">Participants</p>
-                            <p class="card-title">@Model.Teams.Select(t => t.Members?.Count ?? 0).Sum()
+                            <p class="card-title">@Model.Teams.Where(t => t.IsActive).Sum(t => t.Members?.Count ?? 0)
                             <p>
                         </div>
                     </div>
@@ -61,7 +145,33 @@
             <div class="card-footer ">
                 <hr>
                 <div class="stats">
-                    <i class="fa fa-refresh"></i> Incl. inactive ones & dropouts
+                    <i class="fa fa-refresh"></i> Total # of team members
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="card card-stats">
+            <div class="card-body ">
+                <div class="row">
+                    <div class="col-5 col-md-4">
+                        <div class="icon-big text-center icon-warning">
+                            <i class="nc-icon nc-vector text-danger"></i>
+                        </div>
+                    </div>
+                    <div class="col-7 col-md-8">
+                        <div class="numbers">
+                            <p class="card-category">Visitors</p>
+                            <p class="card-title">@Model.Events.Sum(e => e.Responses?.Sum(r => r.ParticipantCount) ?? 0)
+                            <p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer ">
+                <hr>
+                <div class="stats">
+                    <i class="fa fa-clock-o"></i> Total # of registrations
                 </div>
             </div>
         </div>
@@ -77,8 +187,8 @@
                     </div>
                     <div class="col-7 col-md-8">
                         <div class="numbers">
-                            <p class="card-category">Total price value</p>
-                            <p class="card-title">@Model.Prizes.Select(p => p.RewardValue).Sum() €
+                            <p class="card-category">Public price value</p>
+                            <p class="card-title">@Model.Prizes.Where(p => p.IsActive).Sum(p => p.RewardValue) €
                             <p>
                         </div>
                     </div>
@@ -98,39 +208,13 @@
                 <div class="row">
                     <div class="col-5 col-md-4">
                         <div class="icon-big text-center icon-warning">
-                            <i class="nc-icon nc-vector text-danger"></i>
-                        </div>
-                    </div>
-                    <div class="col-7 col-md-8">
-                        <div class="numbers">
-                            <p class="card-category">Mentors</p>
-                            <p class="card-title">@Model.Mentors.Count()
-                            <p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card-footer ">
-                <hr>
-                <div class="stats">
-                    <i class="fa fa-clock-o"></i> Officially registered
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-6">
-        <div class="card card-stats">
-            <div class="card-body ">
-                <div class="row">
-                    <div class="col-5 col-md-4">
-                        <div class="icon-big text-center icon-warning">
                             <i class="nc-icon nc-favourite-28 text-primary"></i>
                         </div>
                     </div>
                     <div class="col-7 col-md-8">
                         <div class="numbers">
-                            <p class="card-category">Followers</p>
-                            <p class="card-title">+45K
+                            <p class="card-category">Public events</p>
+                            <p class="card-title">@Model.Events.Where(e => e.IsActive).Count()
                             <p>
                         </div>
                     </div>
@@ -139,7 +223,7 @@
             <div class="card-footer ">
                 <hr>
                 <div class="stats">
-                    <i class="fa fa-refresh"></i> Update now
+                    <i class="fa fa-refresh"></i> Total # of events
                 </div>
             </div>
         </div>
@@ -148,63 +232,17 @@
 <div class="row">
     <div class="col-md-12">
         <div class="card ">
-            <div class="card-header ">
-                <h5 class="card-title">Users Behavior</h5>
-                <p class="card-category">24 Hours performance</p>
-            </div>
-            <div class="card-body ">
-                <canvas id=chartHours width="400" height="100"></canvas>
-            </div>
-            <div class="card-footer ">
-                <hr>
-                <div class="stats">
-                    <i class="fa fa-history"></i> Updated 3 minutes ago
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-4">
-        <div class="card ">
-            <div class="card-header ">
-                <h5 class="card-title">Email Statistics</h5>
-                <p class="card-category">Last Campaign Performance</p>
-            </div>
-            <div class="card-body ">
-                <canvas id="chartEmail"></canvas>
-            </div>
-            <div class="card-footer ">
-                <div class="legend">
-                    <i class="fa fa-circle text-primary"></i> Opened
-                    <i class="fa fa-circle text-warning"></i> Read
-                    <i class="fa fa-circle text-danger"></i> Deleted
-                    <i class="fa fa-circle text-gray"></i> Unopened
-                </div>
-                <hr>
-                <div class="stats">
-                    <i class="fa fa-calendar"></i> Number of emails sent
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-8">
-        <div class="card card-chart">
             <div class="card-header">
-                <h5 class="card-title">NASDAQ: AAPL</h5>
-                <p class="card-category">Line Chart with Points</p>
+                <h5 class="card-title">Content Edit Behavior</h5>
+                <p class="card-category">Edits of last 30 days</p>
             </div>
             <div class="card-body">
-                <canvas id="speedChart" width="400" height="100"></canvas>
+                <canvas id="editHistory" width="400" height="100"></canvas>
             </div>
             <div class="card-footer">
-                <div class="chart-legend">
-                    <i class="fa fa-circle text-info"></i> Tesla Model S
-                    <i class="fa fa-circle text-warning"></i> BMW 5 Series
-                </div>
-                <hr />
-                <div class="card-stats">
-                    <i class="fa fa-check"></i> Data information certified
+                <hr>
+                <div class="stats">
+                    <i class="fa fa-history"></i> Attention: Calculated only by "Updated at" timestamps
                 </div>
             </div>
         </div>
