--- a/Grow.Server/Views/Shared/Partials/_EventDetailsPartial.cshtml
+++ b/Grow.Server/Views/Shared/Partials/_EventDetailsPartial.cshtml
@@ -20,14 +20,13 @@
 }
 
 <div class="row">
-    <div class="2u 12u(narrower)"></div>
-    <div class="2u 6u(narrower)"><img src="/img/icon/eventdate.png" style="max-width: 50%" /></div>
-    <div class="8u 12u(narrower)">
+    <div class="2u 4u(narrower)" style="text-align: right"><img src="/img/icon/eventdate.png" style="max-width: 50%" /></div>
+    <div class="4u 8u(narrower)">
         @{
             string formatString = string.Empty;
             if (Model.Start.Month == Model.End.Month)
             {
-                formatString = (Model.Start.DayOfYear == Model.Start.DayOfYear)
+                formatString = (Model.Start.DayOfYear == Model.End.DayOfYear)
                     ? "{0:MMMM dd}{1}, {0:yyyy}"
                     : "{0:MMMM dd}{1} - {2:dd}{3}, {0:yyyy}";
             }
@@ -47,40 +46,21 @@
             @(Model.Start.ToShortTimeString()) @:- @(Model.End.ToShortTimeString())
         }
     </div>
-</div>
 
-@if (Model.HeldByName != null)
-{
-    <div class="row">
-        <div class="2u 12u(narrower)"></div>
-        <div class="2u 6u(narrower)"><img src="/img/icon/microphone.png" style="max-width: 50%" /></div>
-        <div class="8u 12u(narrower)">
-            Held by: <br />
-            @Model.HeldByName
-        </div>
-    </div>
-}
-
-<div class="row">
-    <div class="2u 12u(narrower)"></div>
-    <div class="2u 6u(narrower)"><img src="/img/icon/placeholder.png" style="max-width: 50%" /></div>
-    <div class="8u 12u(narrower)">
+    <div class="2u 4u(narrower)" style="text-align: right"><img src="/img/icon/placeholder.png" style="max-width: 50%" /></div>
+    <div class="4u 8u(narrower)">
         @Model.Location<br />@Model.Address
     </div>
-</div>
 
-<div class="row">
-    <div class="2u 12u(narrower)"></div>
-    <div class="2u 6u(narrower)"><img src="/img/icon/visibility.png" style="max-width: 50%" /></div>
-    <div class="8u 12u(narrower)">
+    <div style="clear:both; padding: 0"></div>
+
+    <div class="2u 4u(narrower)" style="text-align: right"><img src="/img/icon/visibility.png" style="max-width: 50%" /></div>
+    <div class="4u 8u(narrower)">
         @Model.Visibility
     </div>
-</div>
 
-<div class="row">
-    <div class="2u 12u(narrower)"></div>
-    <div class="2u 6u(narrower)"><img src="/img/icon/exclamation.png" style="max-width: 50%" /></div>
-    <div class="8u 12u(narrower)">
+    <div class="2u 4u(narrower)" style="text-align: right"><img src="/img/icon/exclamation.png" style="max-width: 50%" /></div>
+    <div class="4u 8u(narrower)">
         @if (Model.IsMandatory)
         {
             @: Mandatory for all enrolled teams
@@ -90,4 +70,16 @@
             @: Optional event to help the teams succeed
         }
     </div>
+    
+    <div style="clear:both; padding: 0"></div>
+
+    @if (Model.HeldByName != null)
+    {
+        <div class="2u 4u(narrower)" style="text-align: right"><img src="/img/icon/microphone.png" style="max-width: 50%" /></div>
+        <div class="4u 8u(narrower)">
+            Held by: <br />
+            @Model.HeldByName
+        </div>
+    }
+
 </div>
